# cmake_project_template

./: .doxygen.conf  .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt
cmake/: util.cmake
cmake/module/: Findgbenchmark.cmake  Findgtest.cmake
cmd/: CMakeLists.txt  main.cc
doc/: RELEASE.md  _sidebar.md  index.html
include/: sum.h
script/: cmake_format.sh  code_format.sh  format.sh  sh_format.sh
src/: CMakeLists.txt  sum.cc  sum_benchmark.cc  sum_test.cc
test/: CMakeLists.txt
